<resources>
    <string name="app_name">運彩家族</string>
    <string name="隱私權政策">隱私權政策</string>
    <string name="運動彩券線上投注站個人資料運用隱私權政策請仔細閱讀以下條款">運動彩券線上投注站個人資料運用隱私權政策，請仔細閱讀以下條款。</string>
    <string name="隱私權內容">1.運動彩券網路投注站(以下簡稱本網)個人資料運用法定告知事項： 由於個人資料之蒐集，涉及 臺端的隱私權益，本網向 臺端蒐集個人資料時，依據個人資料保護法(以下稱個資法)第八條第一項規定，應明確告知 臺端下列事項：（一）非公務機關名稱（二）蒐集之目的（三）個人資料之類別（四）個人資料利用之期間、地區、對象及方式（五）當事人依個資法第三條規定得行使之權利及方式（六）當事人得自由選擇提供個人資料時，不提供將對其權益之影響。 共通特定目的： 059金融服務業依法令規定及金融監理需要，所為之蒐集處理及利用、061金融監督、管理與檢查、063非公務機關依法定義務所進行個人資料之蒐集處理及利用、069契約、類似契約或其他法律關係管理之事務、090消費者、客戶管理與服務、091消費者保護、098商業與技術資訊、104帳務管理及債權交易業務、129會計與相關服務、135資(通)訊服務、136資(通)訊與資料庫管理、137資通安全與管理、148網路購物及其他電子商務服務、157調查、統計與研究分析、177其他金融管理業務、182其他諮詢與顧問服務。  2.存匯業務： 036存款與匯款業務、067信用卡、現金卡、轉帳卡或電子票證業務、082借款戶與存款戶存借作業綜合管理、104帳務管理及債權交易業務、106授信業務、111票劵業務、112票據交換業務、160憑證業務管理、181其他經營合於營業登記項目或組織章程所定之業務。  3.授信業務： 067信用卡、現金卡、轉帳卡或電子票證業務、082借款戶與存款戶存借作業綜合管理、088核貸與授信業務、106授信業務(含事後管理)、111票券業務、126債權整貼現及收買業務、154徵信、181其他經營合於營業登記項目或組織章程所定之業務。  4.信用卡業務： 067信用卡(含附加功能服務)、現金卡、轉帳卡或電子票證業務、082借款戶與存款戶存借作業綜合管理、088核貸與授信業務、093財產保險、106授信業務、127募款(包含公益勸募)、154徵信、160憑證業務管理、181其他經營合於營業登記項目或組織章程所定之業務。  5.電子支付機構相關業務： 022外匯業務、036存款與匯款業務、044投資管理、067信用卡、現金卡、轉帳卡或電子票證業務、068信託業務、082借款戶與存款戶存借作業綜合管理、088核貸與授信業務、094財產管理、106授信業務、112票據交換業務、154徵信、166證券、期貨、證券投資信託及顧問相關業務、181其他經營合於營業登記項目或組織章程所定之業務。  6.其他： 其他經營合於營業登記項目或組織章程所定之業務，或經中央主管機關核准辦理之其他有關業務（例如：保管箱業務、黃金存摺、電子金融業務、代理收付業務、共同行銷或合作推廣業務…等。  7.姓名、身分證統一編號、性別、出生年月日、通訊方式及其他詳如相關業務申請書或契約書之內容，並以本網與客戶往來之相關業務、帳戶或服務及自客戶或第三人處（例如：財團法人金融聯合徵信中心）所實際蒐集之個人資料為準。  8.個人資料利用之期間：特定目的存續期間，依相關法令所定（例如商業會計法等)或因執行業務所必須之保存期間或依個別契約就資料之保存所定之保存年限。 （以期限最長者為準）。</string>
    <string name="同意">同意</string>
    <string name="不同意">不同意</string>
    <string name="帳號">帳號</string>
    <string name="密碼">密碼</string>
    <string name="填寫基本資料">1.填寫基本資料</string>
    <string name="確認密碼">確認密碼</string>
    <string name="姓名">姓名</string>
    <string name="姓名將會被用來當作您申請提領點數時的預設戶名所以請使用真實姓名以免您的權益受損">姓名將會被用來當作您申請提領點數時的預設戶名，所以請使用真實姓名，以免您的權益受損。</string>
    <string name="電子郵件">電子郵件</string>
    <string name="銀行代碼">銀行代碼</string>
    <string name="銀行帳號">銀行帳號</string>
    <string name="推薦碼">推薦碼</string>
    <string name="電話驗證">2.電話驗證</string>
    <string name="手機號碼">手機號碼</string>
    <string name="發送驗證碼">發送驗證碼</string>
    <string name="輸入驗整碼">輸入驗證碼</string>
    <string name="立即註冊">立即註冊</string>
    <string name="會員登入註冊">會員登入/註冊</string>
    <string name="馬上註冊">馬上註冊</string>
    <string name="還不是會員嗎">還不是會員嗎?</string>
    <string name="忘記密碼">忘記密碼</string>
    <string name="登入">登入</string>
    <string name="最新的線上場中投注即可享不讓分串關等等玩法">最新的線上場中投注即可享不讓分、串關等等玩法！</string>
    <string name="發送密碼重置信">發送密碼重置信</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="加總">加總</string>
    <string name="勝分差">勝分差</string>
    <string name="局數">局數</string>
    <string name="遊戲玩法">遊戲玩法</string>
    <string name="結果">結果</string>
    <string name="球種">球種:</string>
    <string name="期間">期間:</string>
    <string name="聯盟">聯盟:</string>
    <string name="無賽事資料">無賽事資料</string>
    <string name="待出單">待出單</string>
    <string name="待派彩">待派彩</string>
    <string name="今日筆數">今日筆數</string>
    <string name="個人資料">個人資料</string>
    <string name="投注紀錄">投注紀錄</string>
    <string name="使用紀錄">使用紀錄</string>
    <string name="補點紀錄">補點紀錄</string>
    <string name="提領紀錄">提領紀錄</string>
    <string name="家族幣">家族幣</string>
    <string name="現金點數">現金點數</string>
    <string name="登出">登出</string>
    <string name="邀請碼">邀請碼</string>
    <string name="熱門聯賽">熱門聯賽</string>
    <string name="冠軍聯賽">冠軍聯賽</string>
    <string name="VS">VS</string>
    <string name="冠軍賽事">冠軍賽事</string>
    <string name="信箱">信箱</string>
    <string name="電話">電話</string>
    <string name="註冊方式">註冊方式</string>
    <string name="招募店家">招募店家</string>
    <string name="帳戶資訊">帳戶資訊</string>
    <string name="距離下一場場中賽事">距離下一場場中賽事還有</string>
    <string name="分">分</string>
    <string name="時">時</string>
    <string name="天">天</string>
    <string name="秒">秒</string>
    <string name="目前無場中賽事">目前無場中賽事</string>
    <string name="訂單編號">訂單編號</string>
    <string name="無使用紀錄">無使用紀錄</string>
    <string name="申請帳戶">申請帳戶</string>
    <string name="狀態">狀態</string>
    <string name="申請時間">申請時間</string>
    <string name="處理時間">處理時間</string>
    <string name="提領金額">提領金額</string>
    <string name="請選擇開始時間">請選擇開始時間</string>
    <string name="請選擇結束時間">請選擇結束時間</string>
    <string name="查詢">查詢</string>
    <string name="派彩金額">派彩金額</string>
    <string name="小計">小計</string>
    <string name="玩法種類">玩法種類</string>
    <string name="派彩金額1">派彩金額(家族幣/現金幣)</string>
    <string name="下單時間">下單時間</string>
    <string name="投注金額">投注金額</string>
    <string name="全場結果">全場結果</string>
    <string name="訂單資訊">訂單資訊</string>
    <string name="投注種類">投注種類</string>
    <string name="投注組合">投注組合</string>
    <string name="單組金額">單組金額</string>
    <string name="若全數過關最高可得">若全數過關最高可得</string>
    <string name="失敗原因">失敗原因</string>
    <string name="投注時間">投注時間</string>
    <string name="編號">編號</string>
    <string name="聯盟2">聯盟</string>
    <string name="訂單狀態">訂單狀態</string>
    <string name="開賽時間">開賽時間</string>
    <string name="比賽隊伍">比賽隊伍</string>
    <string name="選項">選項</string>
    <string name="玩法">玩法</string>
    <string name="賠率">賠率</string>
    <string name="我接受">我接受</string>
    <string name="運彩家族會員條款">運彩家族會員條款</string>
    <string name="投注單">投注單</string>
    <string name="最高可能中">最高可能中</string>
    <string name="清除">清除</string>
    <string name="投注">投注</string>
    <string name="請確認您的訂單">請確認您的訂單</string>
    <string name="投注聲明">投注聲明</string>
    <string name="確認送出">確認送出</string>
    <string name="取消">取消</string>
    <string name="注意">注意</string>
    <string name="賽事編號">賽事編號</string>
    <string name="過關數">過關數</string>
    <string name="客隊">客隊</string>
    <string name="主隊">主隊</string>
    <string name="投注選項">投注選項</string>
    <string name="再次發送">再次發送</string>
    <string name="送出驗證碼">送出驗證碼</string>
    <string name="其他第三方登入">其他第三方登入</string>
    <string name="google">Sign in with Google</string>
    <string name="Facebook">Log in with Facebook</string>
    <string name="facebook_app_id">2041361076190164</string>
 <string name="fb_login_protocol_scheme">fb2041361076190164</string>
</resources>