<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="8dp"
    android:background="@drawable/corners_3">

    <TextView
        android:id="@+id/textView55"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/訂單編號"
        android:textAlignment="viewStart"
        app:layout_constraintEnd_toStartOf="@+id/BettingOrderNo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/BettingOrderNo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textAlignment="center"
        android:textColor="@color/Red"
        app:layout_constraintEnd_toStartOf="@+id/textView63"
        app:layout_constraintStart_toEndOf="@+id/textView55"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView63"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/玩法種類"
        android:textAlignment="viewStart"
        app:layout_constraintEnd_toStartOf="@+id/BettingGameType"
        app:layout_constraintStart_toEndOf="@+id/BettingOrderNo"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/BettingGameType"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="center"
        android:textColor="@color/Black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView63"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView66"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/投注金額"
        android:textAlignment="viewStart"
        app:layout_constraintEnd_toStartOf="@+id/BettingOrderNo"
        app:layout_constraintStart_toStartOf="@+id/textView55"
        app:layout_constraintTop_toBottomOf="@+id/textView55" />

    <TextView
        android:id="@+id/BettingMoney"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/corners_3"
        android:textAlignment="center"
        android:textColor="@color/Black"
        app:layout_constraintBottom_toBottomOf="@+id/textView66"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView66"
        app:layout_constraintTop_toTopOf="@+id/textView66" />

    <TextView
        android:id="@+id/textView69"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/派彩金額1"
        android:textAlignment="viewStart"
        app:layout_constraintStart_toStartOf="@+id/textView66"
        app:layout_constraintTop_toBottomOf="@+id/textView66" />

    <TextView
        android:id="@+id/BettingWonMoney"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/corners_3"
        android:textAlignment="center"
        android:textColor="@color/topcolor"
        app:layout_constraintBottom_toBottomOf="@+id/textView69"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView69"
        app:layout_constraintTop_toTopOf="@+id/textView69" />

    <TextView
        android:id="@+id/textView80"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/下單時間"
        android:textAlignment="viewStart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/BettingDate"
        app:layout_constraintStart_toStartOf="@+id/textView69"
        app:layout_constraintTop_toBottomOf="@+id/textView69" />

    <TextView
        android:id="@+id/BettingDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textColor="@color/Black"
        app:layout_constraintBottom_toBottomOf="@+id/textView80"
        app:layout_constraintEnd_toStartOf="@+id/textView82"
        app:layout_constraintStart_toEndOf="@+id/textView80"
        app:layout_constraintTop_toTopOf="@+id/textView80" />

    <TextView
        android:id="@+id/textView82"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/全場結果"
        android:textAlignment="viewStart"
        app:layout_constraintBottom_toBottomOf="@+id/BettingDate"
        app:layout_constraintEnd_toStartOf="@+id/BettingResult"
        app:layout_constraintStart_toEndOf="@+id/BettingDate"
        app:layout_constraintTop_toTopOf="@+id/BettingDate" />

    <TextView
        android:id="@+id/BettingResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="center"
        android:textColor="@color/Black"
        app:layout_constraintBottom_toBottomOf="@+id/textView82"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView82"
        app:layout_constraintTop_toTopOf="@+id/textView82" />
</android.support.constraint.ConstraintLayout>